--- a/package.json
+++ b/package.json
@@ -40,16 +40,30 @@
     "test": "node ./out/test/runText.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.49.0",
     "@types/glob": "^7.1.3",
     "@types/mocha": "^8.0.0",
     "@types/node": "^14.11.7",
-    "eslint": "^7.9.0",
+    "@types/vscode": "^1.49.0",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^4.1.1",
+    "eslint": "^7.9.0",
     "glob": "^7.1.6",
     "mocha": "^8.1.3",
     "typescript": "^4.0.2",
     "vscode-test": "^1.4.0"
+  },
+  "dependencies": {
+    "@types/component-emitter": "^1.2.10",
+    "@types/cookie": "^0.4.0",
+    "@types/cors": "^2.8.8",
+    "@types/websocket": "^1.0.1",
+    "@types/ws": "^7.4.0",
+    "component-emitter": "^1.3.0",
+    "cookie": "^0.4.1",
+    "cors": "^2.8.5",
+    "nodejs-websocket": "^1.7.2",
+    "socket.io": "^3.0.1",
+    "websocket": "^1.0.32",
+    "ws": "^7.4.0"
   }
 }
